--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,31 +43,7 @@ play.i18n.langs = [ "en" ]
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
-play.modules.enabled += "code.io.udp.InfoSinkModule"
-
-my.port = 6776
-
-aggregator {
-
-  executors {
-    default-executor {
-      access {
-        ssh-commands: [ ssh ]
-      }
-    }
-  }
-
-  collection {
-    targets: {
-      data: {
-        pattern: "/data/:user/*"
-        hosts: [basil105]
-      }
-    }
-  }
-}
-
-my-thread-pool-dispatcher {
+stream-reader-dispatcher {
   # Dispatcher is the name of the event-based dispatcher
   type = Dispatcher
   # What kind of ExecutionService to use
@@ -85,4 +61,30 @@ my-thread-pool-dispatcher {
   # processed per actor before the thread jumps to the next actor.
   # Set to 1 for as fair as possible.
   throughput = 100
+}
+
+play.modules.enabled += "code.io.udp.InfoSinkModule"
+play.modules.enabled += "collection.HostModule"
+
+my.port = 6776
+
+aggregator {
+  executors {
+    default-executor {
+      access {
+        ssh-commands: [ ssh ]
+      }
+    }
+  }
+
+  collection {
+    targets: {
+      data: {
+        pattern: "/data/:user/*"
+        hosts: [basil203..204]
+      }
+    }
+
+    max-concurrency = 3
+  }
 }
