--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,9 +64,18 @@ stream-reader-dispatcher {
 }
 
 play.modules.enabled += "code.io.udp.InfoSinkModule"
-play.modules.enabled += "collection.HostModule"
+play.modules.enabled += "code.collection.HostModule"
+play.modules.enabled += "code.collection.CollectionServiceModule"
+play.modules.enabled += "code.collection.CollectionModule"
 
 my.port = 6776
+
+mongo {
+  uri = "mongodb://localhost"
+  db = aggregator_dev
+}
+
+akka.loglevel = DEBUG
 
 aggregator {
   executors {
@@ -81,7 +90,7 @@ aggregator {
     targets: {
       data: {
         pattern: "/data/:user/*"
-        hosts: [basil203..204]
+        hosts: [basil203]
       }
     }
 
