--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,9 +88,16 @@ aggregator {
 
   collection {
     targets: {
+
       data: {
         pattern: "/data/:user/*"
-        hosts: [basil203]
+        hosts: [basil203..204]
+      }
+
+      violet: {
+        pattern: "/mnt/violet/:user/*"
+        hosts: [basil202,basil203]
+        any-host: true
       }
     }
 
