detail interface and some styles

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -91,14 +91,14 @@ aggregator {
 
       data: {
         pattern: "/data/:user/*"
-        hosts: [basil203..204]
+        hosts: [basil203..204,basil304..306]
       }
 
-      violet: {
-        pattern: "/mnt/violet/:user/*"
-        hosts: [basil202,basil203]
-        any-host: true
-      }
+//      violet: {
+//        pattern: "/mnt/violet/:user/*"
+//        hosts: [basil202,basil203]
+//        any-host: true
+//      }
     }
 
     max-concurrency = 3
