add configuration options to use Java

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,7 +82,8 @@ aggregator {
     default-executor {
       access {
         ssh-commands: [ ssh ]
-        prepend: []
+        commands: [ "python", "-" ]
+        use-java: false
       }
     }
   }
