upgrade collection to new framework

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,7 +12,7 @@ play.crypto.secret = "changeme"
 
 # The application languages
 # ~~~~~
-play.i18n.langs = [ "en" ]
+play.i18n.langs = ["en"]
 
 # Router
 # ~~~~~
@@ -81,9 +81,16 @@ aggregator {
   executors {
     default-executor {
       access {
-        ssh-commands: [ ssh ]
-        commands: [ "python", "-" ]
-        use-java: false
+        ssh-commands: [ssh]
+        commands: [
+          java
+          -Xmx256M
+          -cp
+          ${user.dir}/agent/target/collector-agent-0.1-SNAPSHOT.jar
+          "-agentlib:jdwp=transport=dt_socket,server=n,address=h236.146.228.10.30760.vlan.kuins.net:5006,suspend=y"
+          org.eiennohito.CollectorAgent
+        ]
+        use-java: true
       }
     }
   }
@@ -91,16 +98,22 @@ aggregator {
   collection {
     targets: {
 
-      data: {
-        pattern: "/data/:user/*"
-        hosts: [basil203..204,basil304..306]
+      //      data: {
+      //        pattern: "/data/:user/*"
+      //        hosts: [basil203..204,basil304..306]
+      //      }
+
+      tmp: {
+        pattern: ${user.home}/dev"/:user/*"
+        hosts: [localhost]
+        any-host: true
       }
 
-//      violet: {
-//        pattern: "/mnt/violet/:user/*"
-//        hosts: [basil202,basil203]
-//        any-host: true
-//      }
+      //      violet: {
+      //        pattern: "/mnt/violet/:user/*"
+      //        hosts: [basil202,basil203]
+      //        any-host: true
+      //      }
     }
 
     tick-inteval = 1 minute
