--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,7 +87,7 @@ aggregator {
           -Xmx256M
           -cp
           ${user.dir}/agent/target/collector-agent-0.1-SNAPSHOT.jar
-          "-agentlib:jdwp=transport=dt_socket,server=n,address=h236.146.228.10.30760.vlan.kuins.net:5006,suspend=y"
+          //"-agentlib:jdwp=transport=dt_socket,server=n,address=h236.146.228.10.30760.vlan.kuins.net:5006,suspend=y"
           org.eiennohito.CollectorAgent
         ]
         use-java: true
