--- a/conf/application.conf
+++ b/conf/application.conf
@@ -75,7 +75,11 @@ mongo {
   db = aggregator_dev
 }
 
-akka.loglevel = DEBUG
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
 
 aggregator {
   executors {
